Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,8 +40,20 @@
 <a id="初心者セッションスライドへのリンク" class="anchor" href="#%E5%88%9D%E5%BF%83%E8%80%85%E3%82%BB%E3%83%83%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%B9%E3%83%A9%E3%82%A4%E3%83%89%E3%81%B8%E3%81%AE%E3%83%AA%E3%83%B3%E3%82%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>初心者セッション(スライドへのリンク)</h2>
 
 <ul>
-<li><a href="https://kazutan.github.io/HijiyamaR3/data_handling_s.html">データハンドリング入門</a></li>
-<li><a href="https://kazutan.github.io/HijiyamaR3/ggplot2_s.html">ggplot2を使ってみよう</a></li>
+<li>
+<a href="https://kazutan.github.io/HijiyamaR3/data_handling_s.html">データハンドリング入門</a>
+
+<ul>
+<li><a href="https://kazutan.github.io/HijiyamaR3/data_handling_d.html">htmlドキュメント形式はこちら</a></li>
+</ul>
+</li>
+<li>
+<a href="https://kazutan.github.io/HijiyamaR3/ggplot2_s.html">ggplot2を使ってみよう</a>
+
+<ul>
+<li><a href="https://kazutan.github.io/HijiyamaR3/ggplot2_d.html">htmlドキュメント形式はこちら</a></li>
+</ul>
+</li>
 </ul>
 
 <h2>
